[project]
name = "traffic-counter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cvzone>=1.6.1",
    "filterpy>=1.4.5",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "scikit-image>=0.25.2",
    "ultralytics>=8.3.220",
]
